docker: Chat coverage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,15 @@ services:
       - .:/app
     ports:
       - 8081:4000
+  chat:
+    build: ./pm2
+    environment:
+      DB_HOST: db
+      DB_NAME: odclive
+      DB_USER: postgres
+      DB_PASSWORD: develop
+      DB_PORT: 5432
+    volumes:
+      - ./chat:/app
+    ports:
+      - 8080:80
