--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.0.2",
+    "graphql-upload": "^8.0.2",
     "jsonwebtoken": "^8.4.0",
     "pg": "^7.7.1"
   },
