--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "chat"]
 	path = chat
 	url = git@gitlab.com:odclive/chat.git
+[submodule "app"]
+	path = app
+	url = git@gitlab.com:odclive/app.git
