--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       DB_PASSWORD: develop
       DB_PORT: 5432
       JWT_SECRET: develop
+      YT_CHANNEL: YOURCHANNELID
+      GOOGLE_KEY: YOURGOOGLEAPIKEY
     volumes:
       - .:/app
     ports:
