--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,18 @@ services:
       - .:/app
     ports:
       - 8081:4000
+  web:
+    build: ./vuedev
+    volumes:
+      - ./cli:/app
+    ports:
+      - 8082:8080
+  app:
+    build: ./vuedev
+    volumes:
+      - ./app:/app
+    ports:
+      - 8083:8080
   chat:
     build: ./pm2
     environment:
