--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cli"]
 	path = cli
 	url = git@gitlab.com:odclive/cli.git
+[submodule "admin"]
+	path = admin
+	url = git@gitlab.com:odclive/admin.git
