--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "homepage": "https://gitlab.com/odclive/graph_api#readme",
   "dependencies": {
-    "apollo-server": "^2.3.1",
+    "apollo-server-express": "^2.3.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-upload": "^8.0.2",
     "jsonwebtoken": "^8.4.0",
+    "multer": "^1.4.1",
     "pg": "^7.7.1"
   },
   "devDependencies": {
