--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,9 +42,15 @@ services:
       - ./admin:/app
     ports:
       - 8082:8080
-  app:
+  cli:
     build: ./vuedev
     volumes:
       - ./cli:/app
     ports:
       - 8083:8080
+  app:
+    build: ./vuedev
+    volumes:
+      - ./app:/app
+    ports:
+      - 8084:8080
