--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "graphql-upload": "^8.0.2",
     "jsonwebtoken": "^8.4.0",
     "multer": "^1.4.1",
-    "pg": "^7.7.1"
+    "pg": "^7.7.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "prettier": "^1.15.3"
