--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,32 +25,26 @@ services:
     ports:
       - 8081:4000
   chat:
-    build: ./pm2
+    build: ./chat
     environment:
       DB_HOST: db
       DB_NAME: odclive
       DB_USER: postgres
       DB_PASSWORD: develop
       DB_PORT: 5432
-    volumes:
-      - ./chat:/app
     ports:
-      - 8080:80
-  web:
+      - 8080:8080
+  admin:
     build: ./vuedev
     volumes:
       - ./admin:/app
     ports:
       - 8082:8080
   cli:
-    build: ./vuedev
-    volumes:
-      - ./cli:/app
+    build: ./cli
     ports:
-      - 8083:8080
+      - 8083:5000
   app:
-    build: ./vuedev
-    volumes:
-      - ./app:/app
+    build: ./app
     ports:
-      - 8084:8080
+      - 8084:5000
