--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,14 @@ services:
     ports:
       - 8082:5000
   cli:
-    build: ./cli
+    build: ./vuedev
+    volumes:
+      - ./cli:/app
     ports:
-      - 8083:5000
+      - 8083:8080
   app:
-    build: ./app
+    build: ./vuedev
+    volumes:
+      - ./app:/app
     ports:
-      - 8084:5000
+      - 8084:8080
