admin: added mutations to display shows and events

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       YT_CHANNEL: YOURCHANNELID
       GOOGLE_KEY: YOURGOOGLEAPIKEY
       API_WEBSITE: http://localhost:8081
+      NODE_ENV: production
     volumes:
       - /opt/odclive/uploads:/usr/src/app/uploads
     ports:
