prints: queries available to get shows and events display status

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "type": "git",
     "url": "git+ssh://git@gitlab.com/odclive/graph_api.git"
   },
-  "keywords": ["graphql", "nodejs"],
+  "keywords": [
+    "graphql",
+    "nodejs"
+  ],
   "author": "kessibi",
   "license": "MIT",
   "bugs": {
