--- a/docker-dev.yml
+++ b/docker-dev.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_DB: odclive
       POSTGRES_PASSWORD: develop
   api:
-    build: .
+    build: .dev/api
     environment:
       DB_HOST: db
       DB_NAME: odclive
@@ -21,7 +21,8 @@ services:
       GOOGLE_KEY: YOURGOOGLEAPIKEY
       API_WEBSITE: http://localhost:8081
     volumes:
-      - /opt/odclive/uploads:/usr/src/app/uploads
+      - /opt/odclive/uploads:/app/uploads
+      - ./:/app
     ports:
       - 8081:4000
   chat:
@@ -35,20 +36,14 @@ services:
     ports:
       - 8080:8080
   admin:
-    build: ./vuedev
+    build: .dev/vue
     volumes:
       - ./admin:/app
     ports:
       - 8082:8080
   cli:
-    build: ./vuedev
+    build: .dev/vue
     volumes:
       - ./cli:/app
     ports:
       - 8083:8080
-  app:
-    build: ./vuedev
-    volumes:
-      - ./app:/app
-    ports:
-      - 8084:8080
