--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       YT_CHANNEL: YOURCHANNELID
       GOOGLE_KEY: YOURGOOGLEAPIKEY
       API_WEBSITE: http://localhost:8081
+      SND_ID: CLIENTID
       NODE_ENV: production
     volumes:
       - /opt/odclive/uploads:/usr/src/app/uploads
