--- a/.dev/api/Dockerfile
+++ b/.dev/api/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:10.9.0-alpine
 WORKDIR /app
 RUN npm install pm2 -g
+RUN apk add imagemagick -y
+ADD ./layouts ./layouts
 EXPOSE 4000
 CMD [ "pm2-dev", "index.js"]
