--- a/.dev/api/Dockerfile
+++ b/.dev/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:10.9.0-alpine
 WORKDIR /app
 RUN npm install pm2 -g
-RUN apk add imagemagick -y
+RUN apk add imagemagick
 EXPOSE 4000
 CMD [ "pm2-dev", "index.js"]
