--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,3 +44,9 @@ services:
     build: ./submodules/cli
     ports:
       - 8083:8080
+  ssr_proxy:
+    build: ./submodules/ssr_proxy
+    ports:
+      - 8085:8080
+    environment:
+      TARGET_SRV: cli
