--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,41 @@
-version: '3.1'
+version: '3.8'
 services:
   db:
     build: ./pg
     restart: always
     volumes:
-      - .:/app
+      - /opt/odclive/db:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: odclive
-      POSTGRES_PASSWORD: develop
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
   api:
     build: .
     environment:
       DB_HOST: db
-      DB_NAME: odclive
-      DB_USER: postgres
-      DB_PASSWORD: develop
-      DB_PORT: 5432
-      JWT_SECRET: develop
-      YT_CHANNEL: YOURCHANNELID
-      GOOGLE_KEY: YOURGOOGLEAPIKEY
-      API_WEBSITE: http://localhost:8081
-      SND_ID: CLIENTID
-      NODE_ENV: production
+      DB_NAME: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
+      JWT_SECRET: ${JWT_SECRET}
+      YT_CHANNEL: ${YT_CHANNEL}
+      GOOGLE_KEY: ${GOOGLE_KEY} 
+      API_WEBSITE: ${API_WEBSITE}
+      SND_ID: ${SND_ID}
+      NODE_ENV: ${NODE_ENV}
     volumes:
       - /opt/odclive/uploads:/usr/src/app/uploads
+      - ./submodules:/usr/src/app/submodules/
+      - ${FONTS_DIR}:/root/.fonts
     ports:
       - 8081:4000
   chat:
     build: ./submodules/chat
     environment:
       DB_HOST: db
-      DB_NAME: odclive
-      DB_USER: postgres
-      DB_PASSWORD: develop
-      DB_PORT: 5432
+      DB_NAME: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
     ports:
       - 8080:8080
   admin:
