--- a/docker-dev.yml
+++ b/docker-dev.yml
@@ -1,39 +1,40 @@
-version: '3.1'
+version: '3.8'
 services:
   db:
     build: ./pg
-    restart: always
     volumes:
       - .:/app
     environment:
-      POSTGRES_DB: odclive
-      POSTGRES_PASSWORD: develop
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
   api:
     build: .dev/api
     environment:
       DB_HOST: db
-      DB_NAME: odclive
-      DB_USER: postgres
-      DB_PASSWORD: develop
-      DB_PORT: 5432
-      JWT_SECRET: develop
-      YT_CHANNEL: YOURCHANNELID
-      GOOGLE_KEY: YOURGOOGLEAPIKEY
-      API_WEBSITE: http://localhost:8081
-      SND_ID: CLIENTID
+      DB_NAME: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
+      JWT_SECRET: ${JWT_SECRET}
+      YT_CHANNEL: ${YT_CHANNEL}
+      GOOGLE_KEY: ${GOOGLE_KEY} 
+      API_WEBSITE: ${API_WEBSITE}
+      SND_ID: ${SND_ID}
     volumes:
       - /opt/odclive/uploads:/usr/src/app/uploads
       - ./:/app
+      - ./submodules/layouts/GIMP/scripts:/root/.gimp-2.8/scripts
+      - ${FONTS_DIR}:/root/.fonts
     ports:
       - 8081:4000
   chat:
     build: ./submodules/chat
     environment:
       DB_HOST: db
-      DB_NAME: odclive
-      DB_USER: postgres
-      DB_PASSWORD: develop
-      DB_PORT: 5432
+      DB_NAME: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
     ports:
       - 8080:8080
   admin:
@@ -48,3 +49,9 @@ services:
       - ./submodules/cli:/app
     ports:
       - 8083:8080
+  ssr_proxy:
+    build: submodules/ssr_proxy
+    ports:
+      - 8085:8080
+    environment:
+      TARGET_SRV: localhost:80
