SSR proxy: added env variable to dev.env

--- a/.dev/dev.env
+++ b/.dev/dev.env
@@ -11,6 +11,7 @@ NODE_ENV=development
 JWT_SECRET=develop
 API_WEBSITE=http://localhost:8081
 FONTS_DIR=/home/guillaume/.fonts
+TARGET_SRV=cli
 
 # External services keys
 YT_CHANNEL=YOURCHANNELID
