docker: always restart api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - web
   api:
     build: .
+    restart: always
     environment:
       DB_HOST: db
       DB_NAME: ${DB_DATABASE}
